--- a/site/_data/popovers.yaml
+++ b/site/_data/popovers.yaml
@@ -40,14 +40,14 @@ cursor:
   q: What is a cursor?
   def: The subscription position for a consumer.
 discovery:
-  q: What is discovery in Pulsar?
-  def: TODO
+  q: What is (service) discovery in Pulsar?
+  def: A mechanism provided by Pulsar that enables connecting clients to use just a single URL to interact with all the brokers in a cluster.
 dispatcher:
   q: What is a dispatcher?
   def: An asynchronous TCP server used for all data transfers in a Pulsar cluster. The Pulsar dispatcher uses a custom binary protocol for all communications.
 geo-replication:
   q: What is geo-replication?
-  def: TODO
+  def: Replication of messages across Pulsar clusters, potentially in different datacenters or geographical regions.
 global-topic:
   q: What is a global topic?
   def: A topic that belongs to a global, instance-wide namespace and thus isn't tied to any specific cluster.
@@ -59,47 +59,48 @@ instance:
   def: A group of Pulsar clusters that act together as a single unit.
 ledger:
   q: What is a ledger?
-  def: TODO
+  def: An append-only data structure in BookKeeper that is used to persistently store messages in Pulsar topics.
 message:
   q: What is a message in Pulsar?
-  def: TODO
+  def: A 
 multi-tenancy:
   q: What is multi-tenancy?
-  def: TODO
+  def: The ability to isolate namespaces, specify quotas, and configure authentication and authorization on a per-property basis.
 namespace:
   q: What is a namespace?
-  def: TODO
+  def: A grouping mechanism for related topics.
 namespace-bundle:
   q: What is a namespace bundle?
   def: |
     A virtual group of topics that belong to the same namespace. A namespace bundle is defined as a range between two 32-bit hashes, such as 0x00000000 and 0xffffffff.
 partitioned-topic:
   q: What is a partitioned topic?
-  def: TODO
+  def: A topic that is served by multiple Pulsar brokers, which enables higher throughput.
 producer:
   q: What is a producer?
   def: A process that publishes messages to a Pulsar topic.
 property:
   q: What is a property?
-  def: TODO
+  def: A Pulsar tenant.
 pub-sub:
   q: What is the publish-subscribe pattern (pub-sub)?
-  def: TODO
+  def: A messaging pattern in which publisher proccesses publish messages on topics that are then consumed (processed) by consumer processes.
 pulsar:
   q: What is Pulsar?
   def: Pulsar is a distributed messaging system from Yahoo.
 retention-policy:
   q: What is a retention policy?
-  def: TODO
+  def: Size and/or time limits that you can set on a namespace to configure retention of messages that have already been acknowledged.
 standalone:
   q: What is a standalone Pulsar broker?
   def: A lightweight Pulsar broker in which all components run in a single Java Virtual Machine (JVM) process. Standalone clusters can be run on a single machine and are useful for development purposes.
 subscription:
   q: What is a subscription?
-  def: TODO
+  def: |
+    "A lease on a topic established by a consumer. Pulsar has three subscription modes: exclusive, shared, and failover."
 tenant:
   q: What is a tenant?
-  def: TODO
+  def: An administrative unit for allocating capacity and enforcing an authentication/authorization scheme. Tenants in Pulsar are managed at the property level.
 topic:
   q: What is a topic?
   def: A named channel used to pass messages published by producers to consumers who process those messages.
