Add option to persist unack-msg range to cursor-ledger if range is high

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -282,6 +282,10 @@ managedLedgerCursorRolloverTimeInSeconds=14400
 # crashes.
 managedLedgerMaxUnackedRangesToPersist=1000
 
+# Max number of "acknowledgment holes" that can be stored in Zookeeper. If number of unack message range is higher
+# than this limit then broker will persist unacked ranges into bookkeeper to avoid additional data overhead into
+# zookeeper.  
+managedLedgerMaxUnackedRangesToPersistInZooKeeper=1000
 
 
 ### --- Load balancer --- ###
