--- a/pulsar-client-kafka-compat/pulsar-client-kafka-tests/pom.xml
+++ b/pulsar-client-kafka-compat/pulsar-client-kafka-tests/pom.xml
@@ -26,7 +26,7 @@
 
   <parent>
     <groupId>org.apache.pulsar</groupId>
-    <artifactId>pulsar</artifactId>
+    <artifactId>pulsar-client-kafka-compat</artifactId>
     <version>1.20.0-incubating-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
