Use `advertisedAddress` from host IP in Kubernetes deployment

--- a/conf/bookkeeper.conf
+++ b/conf/bookkeeper.conf
@@ -39,6 +39,11 @@ bookiePort=3181
 # set the listening interface.
 allowLoopback=false
 
+# Configure a specific hostname or IP address that the bookie should use to advertise itself to
+# clients. If not set, bookie will advertised its own IP address or hostname, depending on the
+# listeningInterface and `seHostNameAsBookieID settings.
+advertisedAddress=
+
 # Directory Bookkeeper outputs its write ahead log
 journalDirectory=data/bookkeeper/journal
 
