--- a/kubernetes/google-container-engine/zookeeper.yaml
+++ b/kubernetes/google-container-engine/zookeeper.yaml
@@ -95,6 +95,7 @@ spec:
                 args:
                   - >
                     bin/apply-config-from-env.py conf/zookeeper.conf &&
+                    bin/apply-config-from-env.py conf/pulsar_env.sh &&
                     bin/generate-zookeeper-config.sh conf/zookeeper.conf &&
                     bin/pulsar zookeeper
                 ports:
