--- a/kubernetes/generic/broker.yaml
+++ b/kubernetes/generic/broker.yaml
@@ -55,6 +55,7 @@ spec:
                 args:
                   - >
                     bin/apply-config-from-env.py conf/broker.conf &&
+                    bin/apply-config-from-env.py conf/pulsar_env.sh &&
                     bin/pulsar broker
                 ports:
                   - containerPort: 8080
