--- a/kubernetes/google-container-engine/broker.yaml
+++ b/kubernetes/google-container-engine/broker.yaml
@@ -54,6 +54,7 @@ spec:
                 args:
                   - >
                     bin/apply-config-from-env.py conf/broker.conf &&
+                    bin/apply-config-from-env.py conf/pulsar_env.sh &&
                     bin/pulsar broker
                 ports:
                   - containerPort: 8080
