--- a/site/_data/cli/pulsar-admin.yaml
+++ b/site/_data/cli/pulsar-admin.yaml
@@ -297,6 +297,9 @@ commands:
   - name: delete
     description: Delete a topic. The topic cannot be deleted if there are any active subscriptions or producers connected to the topic.
     argument: persistent://property/cluster/namespace/topic
+  - name: unload
+    description: Unload a topic
+    argument: persistent://property/cluster/namespace/topic    
   - name: subscriptions
     description: Get the list of subscriptions on the topic
     argument: persistent://property/cluster/namespace/topic
@@ -383,6 +386,21 @@ commands:
       description: Subscription to reset position on
     - flags: -t, --time
       description: "The time, in minutes, to reset back to (or minutes, hours, days, weeks, etc.). Examples: `100m`, `3h`, `2d`, `5w`."
+- name: non-persistent
+  description: Operations on persistent topics
+  subcommands:
+  - name: stats
+    description: Get the stats for the topic and its connected producers and consumers. All rates are computed over a 1-minute window and are relative to the last completed 1-minute period.
+    argument: non-persistent://property/cluster/namespace/topic
+  - name: stats-internal
+    description: Get the internal stats for the topic
+    argument: non-persistent://property/cluster/namespace/topic
+  - name: get-partitioned-topic-metadata
+    description: Get the partitioned topic metadata. If the topic is not created or is a non-partitioned topic, this will return an empty topic with zero partitions.
+    argument: non-persistent://property/cluster/namespace/topic
+  - name: unload
+    description: Unload a topic
+    argument: non-persistent://property/cluster/namespace/topic
 - name: properties
   description: Operations about properties
   subcommands:
