Added setting for anonymous user role

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -176,6 +176,9 @@ brokerClientAuthenticationParameters=
 # Supported Athenz provider domain names(comma separated) for authentication
 athenzDomainNames=
 
+# When this parameter is not empty, unauthenticated users perform as anonymousUserRole
+anonymousUserRole=
+
 ### --- BookKeeper Client --- ###
 
 # Authentication plugin to use when connecting to bookies
