Enable replicator to encrypt communication using TLS

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -361,6 +361,9 @@ replicationProducerQueueSize=1000
 # Replicator prefix used for replicator producer name and cursor name
 replicatorPrefix=pulsar.repl
 
+# Enable TLS when talking with other clusters to replicate messages
+replicationTlsEnabled=false
+
 # Default message retention time
 defaultRetentionTimeInMinutes=0
 
